test_outputs/connlist/exposure_test_with_different_rules_3_exposure_output.txt
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment] : TCP 9090

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	=> 	entire-cluster : All Connections
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	hello-world/[pod with {{Key:app,Operator:DoesNotExist,Values:[],}}] : TCP 8080
hello-world/workload-a[Deployment] 	<= 	hello-world/[pod with {{Key:app,Operator:NotIn,Values:[x],}}] : TCP 9090
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-a[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
